Fix navbar collapse css issue

--- a/website/static/css/main.scss
+++ b/website/static/css/main.scss
@@ -68,13 +68,13 @@ td {
           color: #000;
           text-shadow: 0px 0px 12px #F5C383;
       }
-    }
+  }
 
-    .inner-wrapper {
-        background: #fff;
-        border-radius: 0em 0em 0.2em 0.2em;
-        border-bottom: 2px solid rgba(255, 128, 5, 0.26);
-    }
+  .inner-wrapper {
+    background: #fff;
+    border-radius: 0em 0em 0.2em 0.2em;
+    border-bottom: 2px solid rgba(255, 128, 5, 0.26);
+}
 }
 
 
@@ -90,6 +90,73 @@ td {
     border: 1px solid transparent;
     border-radius: 4px;
 }
+
+// navbar collapse breakpoint change
+@media (max-width: 1200px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+    .navbar-nav .open .dropdown-menu {
+     position: static;
+     float: none;
+     width: auto;
+     margin-top: 0;
+     background-color: transparent;
+     border: 0;
+     -webkit-box-shadow: none;
+     box-shadow: none;
+ }
+
+}
+
+@media (max-width: 768px) {
+    #websiteNavbar {
+        .container-fluid {
+            .container {
+                background: #fff;
+                border-bottom: 2px solid rgba(255,128,5,0.26);
+            }
+        }
+        .inner-wrapper {
+            background: #fff;
+            border-radius: 0em 0em 0.2em 0.2em;
+            border-bottom: none;
+        }
+    }
+}
+
+// news post styles
 
 .news-date {
     float: left;
@@ -202,15 +269,60 @@ div.codehilite, .highlight {
 // home-page section styles
 .home-header {
     background: #fff;
-    color: #182422;
-    box-shadow: 0px -34px 19px -22px RGBA(101, 101, 101, 0.41), inset 0px -0px 0px 0px #CCC;
+    color: #182422;@media (max-width: 1200px) {
+        .navbar-header {
+            float: none;
+        }
+        .navbar-left,.navbar-right {
+            float: none !important;
+        }
+        .navbar-toggle {
+            display: block;
+        }
+        .navbar-collapse {
+            border-top: 1px solid transparent;
+            box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        }
+        .navbar-fixed-top {
+            top: 0;
+            border-width: 0 0 1px;
+        }
+        .navbar-collapse.collapse {
+            display: none!important;
+        }
+        .navbar-nav {
+            float: none!important;
+            margin-top: 7.5px;
+        }
+        .navbar-nav>li {
+            float: none;
+        }
+        .navbar-nav>li>a {
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .collapse.in{
+            display:block !important;
+        }
+        .navbar-nav .open .dropdown-menu {
+         position: static;
+         float: none;
+         width: auto;
+         margin-top: 0;
+         background-color: transparent;
+         border: 0;
+         -webkit-box-shadow: none;
+         box-shadow: none;
+     }
+ }
+ box-shadow: 0px -34px 19px -22px RGBA(101, 101, 101, 0.41), inset 0px -0px 0px 0px #CCC;
 
-    p {
-        font-size: 1.1em;
-        font-weight: 400;
-        font-family: sans serif;
-        color: #444;
-    }
+ p {
+    font-size: 1.1em;
+    font-weight: 400;
+    font-family: sans serif;
+    color: #444;
+}
 }
 
 .big-link-col {
@@ -245,7 +357,7 @@ div.codehilite, .highlight {
         margin: 0 auto;
         text-align: center;
         font-family: 'sans serif', sans-serif;
-        font-size: 1.6em;
+        font-size: 1.5em;
         color: #1a1a1a;
         padding: 0.6em;
         transition: all .2s;
@@ -357,10 +469,10 @@ div.codehilite, .highlight {
         border: #1a1a1a;
         color: #fff;
         &:hover {
-        background: rgb(225, 118, 118) none repeat scroll 0% 0%;
-        color: #fff;
-        box-shadow: 0px 0px 7px RGBA(0, 0, 0, 0.27);
-    }
+            background: rgb(225, 118, 118) none repeat scroll 0% 0%;
+            color: #fff;
+            box-shadow: 0px 0px 7px RGBA(0, 0, 0, 0.27);
+        }
     }
     &:hover {
         background: #6C6B6B;
@@ -422,4 +534,10 @@ code {
     margin: 0 auto;
     width: 100%;
     text-align: center;
+}
+
+
+// social media share button styles
+.fb_iframe_widget {
+    vertical-align: top;
 }
